# oba_task

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_enforce_activity_hierarchy.py
app/: main.py
app/api/: dependencies.py  errors.py  router.py
app/api/routers/: activities.py  buildings.py  organizations.py
app/api/schemas/: activities.py  organizations.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: models.py  seed.py  session.py
app/repositories/: activity.py  building.py  organization.py
app/scripts/: drop_postgres_db.py  ensure_postgres_db.py  postgres_db.py  reset_postgres_db.py  wait_for_db.py
app/services/: activity_service.py  building_service.py  organization_query_service.py
docker/: entrypoint.sh
tests/: conftest.py  test_api.py  test_models.py
