[project]
name = "oba-task"
version = "0.1.0"
description = "OBA REST API built with FastAPI, SQLAlchemy, Alembic, and uv."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
seed-db = "app.db.seed:main"
ensure-postgres-db = "app.scripts.ensure_postgres_db:main"
drop-postgres-db = "app.scripts.drop_postgres_db:main"
reset-postgres-db = "app.scripts.reset_postgres_db:main"
wait-db = "app.scripts.wait_for_db:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
show-fixes = true
extend-exclude = [
    "alembic",
    "app/scripts",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "I",
    "ICN",
    "PGH",
    "PIE",
    "PT",
    "RET",
    "T20",
    "UP",
    "YTT",
]

[tool.ruff.format]
quote-style = "single"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true
